<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/themeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/themeSettings" />

    <Switch
        android:id="@+id/soundSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soundSettings" />

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificationSettings" />

</LinearLayout>